Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
       <h1>
 <a id="ccpp-awesome-m" class="anchor" href="#ccpp-awesome-m" aria-hidden="true"><span class="octicon octicon-link"></span></a>CCPP-Awesome-M</h1>
 
-<p><strong>Combine Cycle Power Plant Performace Calculate</strong>
-Python</p>
+<p>联合循环机组性能计算程序包<br>
+Combine Cycle Power Plant Performace Calculate Package</p>
+
+<hr>
+
+<p>利用Python语言实现对燃气轮机、蒸汽轮机、余热锅炉经济性指标计算。<br>
+Calculation of economic indexes of gas turbine, steam turbine, waste heat boiler using Python language.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/icesharp/CCPP-Awesome-M">CCPP-Awesome-M</a> is maintained by <a href="https://github.com/icesharp">icesharp</a>.</span>
